# GPS-Spoofer-SImulator

src/: GroundAuthentication.launch
src/GPSNode/: CMakeLists.txt  package.xml
src/GPSNode/include/: GPS.h
src/GPSNode/src/: GPS.cpp
src/GPS_Filter/: CMakeLists.txt  package.xml
src/GPS_Filter/config/: parameters.xml
src/GPS_Filter/include/: Filter.h
src/GPS_Filter/src/: AppMain.cpp  Filter.cpp
src/GPS_object/: CMakeLists.txt  package.xml
src/GPS_object/include/: GPSObject.h
src/GPS_object/src/: GPSObject.cpp
src/Launch Files for ECE 419/: demo_multiRover_VirANDPhy.launch
src/ReceiverNode/: CMakeLists.txt  package.xml
src/ReceiverNode/config/: real_rover_specs.txt
src/ReceiverNode/include/: Receiver.h
src/ReceiverNode/src/: Receiver.cpp
src/demo_clock_library/: CMakeLists.txt  package.xml
src/demo_clock_library/include/: Clock.h
src/demo_clock_library/src/: Clock.cpp
src/demo_float_object/: CMakeLists.txt  package.xml
src/demo_float_object/include/: FloatObject.h
src/demo_float_object/src/: FloatObject.cpp
src/demo_int_object/: CMakeLists.txt  package.xml
src/demo_int_object/include/: IntObject.h
src/demo_int_object/src/: IntObject.cpp
src/demo_keyboard_input/: CMakeLists.txt  package.xml
src/demo_keyboard_input/include/: Keyboard.h
src/demo_keyboard_input/src/: Keyboard.cpp
src/demo_node/: CMakeLists.txt  package.xml
src/demo_node/include/: Node.h  SerialObject.h
src/demo_node/src/: Node.cpp
